--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,13 @@ license = "MIT License"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+argparse = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+openapi-sorter = 'openapi_sorter.cli:main'
