--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ argparse = "^1.4.0"
 PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.3.0"
+pytest-cov = "^4.0.0"
+pytest-html = "^3.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
