Remove 'allo-multiple' option. It's redundant.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,6 +2,6 @@
   name: OpenAPI-Sorter
   description: OpenAPI-Sorter is a utility for parsing, sorting, and outputting OpenAPI YAML files by organizing path, model, and other notations. It helps maintain clean and well-structured API documentation by ensuring consistent ordering of components in the YAML file.
   entry: openapi_sorter
-  args: [--overwrite, --allow-multiple]
+  args: [--overwrite]
   language: python
   types: [yaml]
